[package]
name = "searchfast"
version = "0.0.0"
description = "Searchfast"
authors = ["kathan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "system-tray", "window-unmaximize", "window-maximize", "window-close", "window-minimize", "window-start-dragging", "window-unminimize", "global-shortcut-all", "macos-private-api", "shell-open", "window-hide", "window-show", "window-set-skip-taskbar", "window-set-size", "window-set-focus"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-positioner = "0.1"
enigo = "0.0.14"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.38.0", features = ["full"] }
async-openai = "0.19"
dotenv = "0.15"
futures = "0.3.30"
log = "0.4"  # Add this line
env_logger = "0.10"  # Add this line
auto-launch = "0.5.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
